# lab-apt

./: LICENSE  README-CN.md  README.md
apt-sdk/: apt_protocol.c  apt_protocol.h
example/ESP32/client/main/: CMakeLists.txt  gattc_demo.c  trans.c
example/ESP32/common/: common.c  common.h  dev_manage_service.pb.c  os_adapter.c  os_adapter.h  service_protocol_port.c  service_protocol_port.h  service_protocol_table.c  service_protocol_table.h  sys_bat.pb.c  sys_bat.pb.h
example/ESP32/server/main/: dev_manage_service.pb.h  gattc_demo.c  gattc_demo.h  main.h  period_task.c  period_task.h  trans.c  trans.h
